Fix log rendering at high volumes (#173)
* Slice logs to latest 250

* Append the latest log, don't rerender the whole list

* Remove console.log

* Fix scroll

* Remove package and scrollbar

--- a/src/instruments/content/Console/styles.scss
+++ b/src/instruments/content/Console/styles.scss
@@ -7,14 +7,14 @@
   height: 100%;
   min-height: 35rem;
   max-height: 35rem;
-  overflow-x: hidden;
+  overflow: hidden;
   background: linear-gradient(45deg, $darkPurple, $lightPurple);
   color: $white;
   border-radius: 3px;
 }
 
 .content {
-  height: auto;
+  flex: 1;
   width: 100%;
   display: flex;
   overflow-y: scroll;
